# mts-ml-cup

./: .gitignore  encoders_prepare.ipynb  pyproject.toml
src/mts/: 1_to_pico.py  2_link_mapper.py  3_to_parquets.py  4_split.py  5_prepare_url_vectors.py  age_groups.py  custom_deberta.py  fasttext_gen_dataset.py  fasttext_train.py  mix.py  parse_site.py  parse_zoo.py  train.py  url_embedder_bert.py  url_embedder_fasttext.py  url_embedder_helper.py
